--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -116,13 +116,13 @@
                         android:layout_marginTop="20dip"
                         android:paddingLeft="5dip" >
 
-                        <ImageView
+                        <cn.whzxt.android.NetImageView
                             android:id="@+id/imgCoach"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="102dip"
+                            android:layout_height="126dip"
                             android:layout_marginLeft="3dip"
                             android:layout_marginTop="3dip"
-                            android:src="@drawable/coach"/>
+                            android:src="@drawable/photo"/>
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -149,12 +149,6 @@
                         </LinearLayout>
                     </LinearLayout>
 
-                    <Button
-                        android:id="@+id/btnCoachLogout"
-                        android:layout_width="wrap_content"
-                        android:layout_height="34dp"
-                        android:layout_marginTop="10dip"
-                        android:text="签退"/>
                 </LinearLayout>
 
             </LinearLayout>
@@ -175,14 +169,15 @@
                     android:background="@drawable/bg1"
                     android:orientation="vertical"
                     android:paddingLeft="3dip" >
-
+
                     <TextView
-                        android:id="@+id/textView2"
+                        android:id="@+id/txtStudentTitle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="学员"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:textColor="@color/labelfont" />
+
                 </LinearLayout>
 
                 <TextView
@@ -205,13 +200,13 @@
                         android:layout_marginTop="20dip"
                         android:paddingLeft="5dip" >
 
-                        <ImageView
+                        <cn.whzxt.android.NetImageView
                             android:id="@+id/imgStudent"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="102dip"
+                            android:layout_height="126dip"
                             android:layout_marginLeft="3dip"
                             android:layout_marginTop="3dip"
-                            android:src="@drawable/coach" />
+                            android:src="@drawable/photo" />
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -273,20 +268,30 @@
                     android:layout_height="1dip"
                     android:orientation="vertical" android:background="@color/contentborder">
                 </LinearLayout>
-
-                <TextView
-                    android:id="@+id/txtStatus"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="等待上传数据" android:layout_gravity="right" android:paddingRight="3dip"/>
-
+
                 <TextView
                     android:id="@+id/txtLngLat"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:paddingRight="3dip"
+                    android:text="GPS:0,0" android:layout_gravity="right"/>
+
+                <TextView
+                    android:id="@+id/txtStatus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:paddingRight="3dip"
+                    android:text="等待上传GPS数据" android:layout_marginTop="5dip"/>
+
+                <TextView
+                    android:id="@+id/txtUploadUseDataStatus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="right"
                     android:layout_marginTop="5dip"
-                    android:text="GPS:0,0" android:paddingRight="3dip"/>
+                    android:paddingRight="3dip"
+                    android:text="等待上传训练数据" />
 
             </LinearLayout>
         </LinearLayout>
@@ -305,9 +310,9 @@
                 android:id="@+id/tableRow5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >
-
+
                 <TextView
-                    android:id="@+id/textView12"
+                    android:id="@+id/txtNetworkStatus"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="3dip"
