--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -12,4 +12,7 @@
 	<color name="button_checked_press">#8818A2E7</color>
 	<color name="button_checked_normal">#FF18A2E7</color>
 	<color name="button_checked_text">#FFFFFFFF</color>
+    <color name="card_press">#8818A2E7</color>
+    <color name="cardbg">#18A2E7</color>
+	<color name="card_text">#FFFFFFFF</color>
 </resources>
