--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -200,15 +200,16 @@
                                     android:clickable="true"
                                     android:orientation="vertical"
                                     android:padding="3dip" >
-
+
                                     <TextView
                                         android:id="@+id/txtJFMS"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_gravity="center"
-                                        android:text="计费模式"
+                                        android:text="训练状态"
                                         android:textAppearance="?android:attr/textAppearanceMedium"
                                         android:textColor="@color/button_checked_text" />
+
                                 </LinearLayout>
 
                                 <LinearLayout
@@ -221,15 +222,16 @@
                                     android:clickable="true"
                                     android:orientation="vertical"
                                     android:padding="3dip" >
-
+
                                     <TextView
                                         android:id="@+id/txtFJFMS"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_gravity="center"
-                                        android:text="非计费模式"
+                                        android:text="自由状态"
                                         android:textAppearance="?android:attr/textAppearanceMedium"
                                         android:textColor="@color/button_text" />
+
                                 </LinearLayout>
                             </LinearLayout>
 
@@ -283,25 +285,24 @@
                                 </LinearLayout>
                             </LinearLayout>
 
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:id="@+id/layScrollDown"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@color/cardbg"
-                            android:clickable="true"
-                            android:gravity="center"
-                            android:paddingTop="3dip" >
-
-                            <TextView
-                                android:id="@+id/textView3"
-                                android:layout_width="wrap_content"
+                            <LinearLayout
+                                android:id="@+id/layScrollDown"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:text="^^    科目三模拟考试    ^^"
-                                android:textAppearance="?android:attr/textAppearanceMedium"
-                                android:textColor="@color/card_text" />
+                                android:background="@color/cardbg"
+                                android:clickable="true"
+                                android:gravity="center"
+                                android:paddingTop="3dip" >
+
+                                <TextView
+                                    android:id="@+id/textView3"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center"
+                                    android:text="^     科目三模拟考试     ^"
+                                    android:textAppearance="?android:attr/textAppearanceMedium"
+                                    android:textColor="@color/card_text" />
+                            </LinearLayout>
 
                         </LinearLayout>
 
@@ -439,13 +440,13 @@
 
                         <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="220dip"
+                            android:layout_height="140dip"
                             android:orientation="vertical" >
 
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginBottom="20dip"
+                                android:layout_marginBottom="10dip"
                                 android:background="@color/titleborder"
                                 android:orientation="vertical"
                                 android:padding="5dip" >
@@ -485,6 +486,12 @@
                                 android:textAppearance="?android:attr/textAppearanceMedium" />
                         </LinearLayout>
 
+                        <SurfaceView
+                            android:id="@+id/previewSurface"
+                            android:layout_width="100dip"
+                            android:layout_height="70dip"
+                            android:visibility="visible" android:layout_gravity="right"/>
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="1dip"
@@ -492,31 +499,100 @@
                             android:orientation="vertical" >
                         </LinearLayout>
 
-                        <TextView
-                            android:id="@+id/txtLngLat"
-                            android:layout_width="wrap_content"
+                        <LinearLayout
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="right"
-                            android:paddingRight="3dip"
-                            android:text="GPS:0,0" />
+                            android:layout_marginBottom="5dip">
+
+                            <LinearLayout
+                                android:id="@+id/layTabSysInfo"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:background="@drawable/button_checked_bg"
+                                android:clickable="true"
+                                android:orientation="vertical"
+                                android:padding="3dip" >
+
+                                <TextView
+                                    android:id="@+id/btnTabSysInfo"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center"
+                                    android:text="系统消息"
+                                    android:textAppearance="?android:attr/textAppearanceMedium"
+                                    android:textColor="@color/button_checked_text" />
 
-                        <TextView
-                            android:id="@+id/txtStatus"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="right"
-                            android:layout_marginTop="5dip"
-                            android:paddingRight="3dip"
-                            android:text="等待上传GPS数据" />
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:id="@+id/layTabDevStatus"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:background="@drawable/button_bg"
+                                android:clickable="true"
+                                android:orientation="vertical"
+                                android:padding="3dip" >
+
+                                <TextView
+                                    android:id="@+id/btnTabDevStatus"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center"
+                                    android:text="设备状态"
+                                    android:textAppearance="?android:attr/textAppearanceMedium"
+                                    android:textColor="@color/button_text" />
 
-                        <TextView
-                            android:id="@+id/txtUploadUseDataStatus"
-                            android:layout_width="wrap_content"
+                            </LinearLayout>
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:id="@+id/laySysInfo"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="right"
-                            android:layout_marginTop="5dip"
-                            android:paddingRight="3dip"
-                            android:text="等待上传训练数据" />
+                            android:orientation="vertical"
+                            android:paddingLeft="5dip" >
+
+                            <TextView
+                                android:id="@+id/txtSysInfo"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="暂无消息" />
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:id="@+id/layDevStatus"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:visibility="gone" >
+
+                            <TextView
+                                android:id="@+id/txtLngLat"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:paddingRight="3dip"
+                                android:text="GPS:0,0" android:layout_gravity="right"/>
+
+                            <TextView
+                                android:id="@+id/txtStatus"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="5dip"
+                                android:paddingRight="3dip"
+                                android:text="等待上传GPS数据" android:layout_gravity="right"/>
+
+                            <TextView
+                                android:id="@+id/txtUploadUseDataStatus"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="5dip"
+                                android:paddingRight="3dip"
+                                android:text="等待上传训练数据" android:layout_gravity="right" android:layout_marginBottom="3dip"/>
+                        </LinearLayout>
+
                     </LinearLayout>
                 </LinearLayout>
 
@@ -527,6 +603,7 @@
                     android:orientation="vertical" android:layout_marginTop="5dip" android:layout_marginBottom="30dip">
 
                     </LinearLayout>
+
         </LinearLayout>
 </ScrollView>
         <TableLayout
