--- a/res/layout/welcome.xml
+++ b/res/layout/welcome.xml
@@ -2,16 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
+    android:orientation="vertical" android:background="#111111">
+
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="100dip"
-        android:text="驾培智能终端系统"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:text="车载智能驾培终端"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#FFFFFF"
+        android:textSize="32sp" />
 
     <TextView
         android:id="@+id/txtStatus"
@@ -19,6 +21,14 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="10dip"
-        android:text="正在等待系统启动..." />
+        android:text="正在等待系统启动..." android:textColor="#BBBBBB"/>
+
+    <Button
+        android:id="@+id/btnRetry"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dip"
+        android:text="重试" />
 
 </LinearLayout>
